Navigation Added with Offer
